; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/phy/extr_phy.c_usb_add_phy_dev.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/phy/extr_phy.c_usb_add_phy_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_phy = type { i32, i32, i32 }

@.str = private unnamed_addr constant [28 x i8] c"no device provided for PHY\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@phy_lock = common dso_local global i32 0, align 4
@phy_list = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @usb_add_phy_dev(%struct.usb_phy* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.usb_phy*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.usb_phy* %0, %struct.usb_phy** %3, align 8
  %6 = load %struct.usb_phy*, %struct.usb_phy** %3, align 8
  %7 = getelementptr inbounds %struct.usb_phy, %struct.usb_phy* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %17, label %10

10:                                               ; preds = %1
  %11 = load %struct.usb_phy*, %struct.usb_phy** %3, align 8
  %12 = getelementptr inbounds %struct.usb_phy, %struct.usb_phy* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @dev_err(i32 %13, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  %15 = load i32, i32* @EINVAL, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %2, align 4
  br label %37

17:                                               ; preds = %1
  %18 = load %struct.usb_phy*, %struct.usb_phy** %3, align 8
  %19 = call i32 @usb_charger_init(%struct.usb_phy* %18)
  %20 = load %struct.usb_phy*, %struct.usb_phy** %3, align 8
  %21 = call i32 @usb_add_extcon(%struct.usb_phy* %20)
  store i32 %21, i32* %5, align 4
  %22 = load i32, i32* %5, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %17
  %25 = load i32, i32* %5, align 4
  store i32 %25, i32* %2, align 4
  br label %37

26:                                               ; preds = %17
  %27 = load %struct.usb_phy*, %struct.usb_phy** %3, align 8
  %28 = getelementptr inbounds %struct.usb_phy, %struct.usb_phy* %27, i32 0, i32 1
  %29 = call i32 @ATOMIC_INIT_NOTIFIER_HEAD(i32* %28)
  %30 = load i64, i64* %4, align 8
  %31 = call i32 @spin_lock_irqsave(i32* @phy_lock, i64 %30)
  %32 = load %struct.usb_phy*, %struct.usb_phy** %3, align 8
  %33 = getelementptr inbounds %struct.usb_phy, %struct.usb_phy* %32, i32 0, i32 0
  %34 = call i32 @list_add_tail(i32* %33, i32* @phy_list)
  %35 = load i64, i64* %4, align 8
  %36 = call i32 @spin_unlock_irqrestore(i32* @phy_lock, i64 %35)
  store i32 0, i32* %2, align 4
  br label %37

37:                                               ; preds = %26, %24, %10
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}

declare dso_local i32 @dev_err(i32, i8*) #1

declare dso_local i32 @usb_charger_init(%struct.usb_phy*) #1

declare dso_local i32 @usb_add_extcon(%struct.usb_phy*) #1

declare dso_local i32 @ATOMIC_INIT_NOTIFIER_HEAD(i32*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
